--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <main role="main">
+    <main>
       <h1>Advice #<span id="adviceNumber"></span></h1>
       <p id="quote">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
       <img src="images/pattern-divider-desktop.svg" alt="Divider" />
       <button id="newQuoteButton"><img src="images/icon-dice.svg" alt="Dice" /></button>
     </main>
-    <footer role="footer">
+    <footer role="contentinfo">
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
         <a href="ryanzipprich.com">Ryan Zipprich</a>.
