--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="images/pattern-divider-desktop.svg" alt="Divider" />
       <button id="newQuoteButton"><img src="images/icon-dice.svg" alt="Dice" /></button>
     </main>
-    <footer role="contentinfo">
+    <footer>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
         <a href="ryanzipprich.com">Ryan Zipprich</a>.
